l10ntools/source/common.cxx
@@ -43,6 +43,10 @@ bool handleArguments(
         {
             nState = STATE_LANGUAGES;
         }
+        else if ( OString( argv[ i ] ).toAsciiUpperCase() == "-B" )
+        {
+            o_aHandledArgs.m_bUTF8BOM = true;
+        }
         else
         {
             switch ( nState )
@@ -90,12 +94,13 @@ void writeUsage(const OString& rName, const OString& rFileType)
 {
     std::cout
         << " Syntax: " << rName.getStr()
-        << " -i FileIn -o FileOut [-m DataBase] [-l Lang]\n"
+        << " -i FileIn -o FileOut [-m DataBase] [-l Lang] [-b]\n"
         << " FileIn:   Source files (" << rFileType.getStr() << ")\n"
         << " FileOut:  Destination file (*.*)\n"
         << " DataBase: Mergedata (*.po)\n"
         << " Lang: Restrict the handled language; one element of\n"
-        << " (de, en-US, ...) or all\n";
+        << " (de, en-US, ...) or all\n"
+        << " -b:   Add UTF-8 Byte Order Mark to FileOut(use with -m option)\n";
 }
 
 void writePoEntry(
